# FinOpsCrews

./: README.md
crypto_pump_detector/: .env.example  README.md  pyproject.toml
crypto_pump_detector/src/crypto_pump_detector/: crew.py  main.py
crypto_pump_detector/src/crypto_pump_detector/config/: agents.yaml  tasks.yaml
crypto_pump_detector/src/crypto_pump_detector/tools/: __init__.py  market_scanner.py  sentiment.py  technical_analysis.py
stock_analyzer/: .env.example  README.md  pyproject.toml
stock_analyzer/src/stock_analyzer/: crew.py  main.py
stock_analyzer/src/stock_analyzer/config/: agents.yaml  tasks.yaml
stock_analyzer/src/stock_analyzer/tools/: __init__.py  chart_analysis.py  forecast.py  fundamentals.py  screener.py
